bweb (2.0.1-2) stable; urgency=low

  * fix /etc/bacula permissions
  * fix label_barcodes drive bug 

 -- Eric Bollengier <eric@eb.homelinux.org>  Fri,  19 Jan 2007 21:10:47 +0000

bweb (2.0.1-1) stable; urgency=low

  * Do nothing if destination string is empty
  * Fix warning message when using with bweb http connector
  * Add CVS version number to UA brestore

 -- Eric Bollengier <eric@eb.homelinux.org>  Fri,  12 Jan 2007 22:54:47 +0000

bweb (2.0.0-2) stable; urgency=low

  * Depends: DBD-Pg or DBD-Mysql 
  * Add french tpl in /usr/share/bweb/fr/tpl
  * Add favicon.ico
  * Change /etc/bacula/bweb.conf initialisation

 -- Eric Bollengier <eric@eb.homelinux.org>  Mon,  01 Jan 2007 09:22:47 +0000
	
bweb (2.0.0-1) stable; urgency=low

  * Change revision.
  * move /etc/bweb/config to /etc/bacula/bweb.conf

 -- Eric Bollengier <eric@eb.homelinux.org>  Sun,  31 Dec 2006 09:22:47 +0000
	
bweb (1.40-1) stable; urgency=low

  * Initial Release.

 -- Eric Bollengier <eric@eb.homelinux.org>  Sam,  18 Nov 2006 23:22:47 +0000
