@@ -1,5 +1,6 @@
 bweb (2.0.1-2) stable; urgency=low
 
+  * fv_write_path is optionnal now
   * fix /etc/bacula permissions
   * fix label_barcodes drive bug 
 
